<resources>
    <string name="app_name">NoteApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="float_button">float button</string>
    <string name="enter_your_title_card">Enter Your Title Card</string>
    <string name="enter_your_information">Enter Your Information</string>
    <string name="note_title">Note Title</string>
    <string name="note_body">Note Body</string>
    <string name="search">Search</string>
    <string name="save">Save</string>
    <string name="image_empty_list">Image Empty List</string>
    <string name="empty_list">Empty List</string>
    <string name="search_your_card">Search your card</string>
</resources>