<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.UpdateNoteFragment">

        <LinearLayout
            android:id="@+id/linearUpdateNote"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewUpdateNote"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:backgroundTint="@color/white"
                app:cardCornerRadius="5dp"
                app:cardElevation="8dp">

                <LinearLayout
                    android:id="@+id/linearUpdateNote2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <EditText
                        android:id="@+id/edtUpdateNoteTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="name"
                        android:background="@android:color/transparent"
                        android:ems="10"
                        android:hint="@string/enter_your_title_card"
                        android:inputType="text"
                        android:padding="10dp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/edtUpdateNoteBody"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:autofillHints="name"
                        android:background="@android:color/transparent"
                        android:ems="10"
                        android:hint="@string/enter_your_information"
                        android:inputType="textMultiLine"
                        android:padding="14dp"
                        android:textColor="@color/info"
                        android:textColorHint="@color/info"
                        android:textSize="16sp" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/floatingButtonUpdateNote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:backgroundTint="@color/purpleButton"
            android:clickable="true"
            android:contentDescription="@string/float_button"
            app:icon="@drawable/baseline_done_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="MissingConstraints" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/floatingButtonDeleteNote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:backgroundTint="@color/purpleButton"
            android:clickable="true"
            android:contentDescription="@string/float_button"
            app:icon="@drawable/baseline_delete_forever_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>